# niTM

./: .commitlintrc.yaml  .prettierignore  .prettierrc.yaml  README.md  cspell.yaml  package.json  pnpm-lock.yaml  tag-database-schema.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  api.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: exiftool.rs  file_sys.rs  lib.rs  main.rs  state.rs  tag_database.rs  tag_manager.rs
src/api/: exiftool.ts  file-sys.ts  file_sys.ts  tag-database.ts
src/components/: FileTable.tsx  SideBar.tsx  TagChips.tsx  TagDbDialog.tsx  TagSelect.tsx
src/components/EditorInfo/: index.tsx
src/components/FileTable/: TagSelect.tsx  index.tsx
src/pages/: FileTablePage.tsx
src/stores/: selectedFiles.ts  selectedTags.ts  tags.ts
